feat(tests): convert AdminIntersectionServiceTest to integration test with Testcontainers
- Refactored `AdminIntersectionServiceTest` to use Spring Boot's integration testing annotations (`@SpringBootTest`, `@Testcontainers`, `@Transactional`).
- Replaced Mockito mocks with actual repository beans for full stack validation.
- Configured MongoDB `@Container` with `@DynamicPropertySource` for integration test environment.
- Added helper methods and entity factories for persisted test data setup.
- Simplified test cases by removing unnecessary mocking and stubbing.